@@ -1,194 +1,100 @@
 package com.example.project.route.service;
 
-import com.example.project.route.domain.Route;
-import com.example.project.route.domain.RoutePlace;
-import com.example.project.route.dto.*;
-import com.example.project.route.dto.RouteCreateRequestDto.SimplePlaceDto;
-import com.example.project.route.repository.RoutePlaceRepository;
-import com.example.project.route.repository.RouteRepository;
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.temporal.ChronoUnit;
-import java.util.*;
-import java.util.stream.Collectors;
+import com.example.project.member.domain.TravelUser;
+import com.example.project.member.repository.TravelUserRepository;
+import com.example.project.route.domain.Route;
+import com.example.project.route.dto.RouteCreateRequestDto;
+import com.example.project.route.dto.RouteDetailResponseDto;
+import com.example.project.route.dto.RouteListItemDto;
+import com.example.project.route.repository.RouteRepository;
 
-/**
- * 여행 일정(Route) 비즈니스 로직
- * - 특징 1: PlaceRepository 의존성 제거 (파이썬에서 받은 데이터 신뢰)
- * - 특징 2: RoutePlace에 객체 대신 ID와 이름(placeName) 직접 저장
- * - 특징 3: 프론트에서 [[1일차], [2일차]] 형태의 이중 리스트로 데이터 수신
- */
-@Slf4j
+import lombok.RequiredArgsConstructor;
+
 @Service
 @RequiredArgsConstructor
-@Transactional
+@Transactional(readOnly = true) // 기본적으로 읽기 전용 (성능 최적화)
 public class RouteService {
 
     private final RouteRepository routeRepository;
-    private final RoutePlaceRepository routePlaceRepository;
+    private final TravelUserRepository travelUserRepository;
 
     /**
      * 일정 생성
      */
+    @Transactional // 쓰기 작업이므로 readOnly = false
     public Long createRoute(RouteCreateRequestDto dto) {
-        log.info("일정 생성 요청: 제목={}, 회원ID={}", dto.getTitle(), dto.getMemberId());
+        // 1. 회원(TravelUser) 조회
+        // DTO로 들어온 memberId를 이용해 실제 DB에서 유저 객체를 가져옵니다.
+        TravelUser user = travelUserRepository.findById(dto.getMemberId())
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다. id=" + dto.getMemberId()));
 
-        // 1. Route(부모) 저장
+        // 2. 일정(Route) 엔티티 생성
         Route route = new Route();
-        route.setMemberId(dto.getMemberId());
+        route.setUser(user); // ★ 핵심: 조회한 유저 객체를 넣어줍니다. (관계 설정)
         route.setTitle(dto.getTitle());
         route.setStartDate(dto.getStartDate());
         route.setEndDate(dto.getEndDate());
-
-        // 날짜 차이 계산 (시작일~종료일)
-        int totalDays = (int) ChronoUnit.DAYS.between(dto.getStartDate(), dto.getEndDate()) + 1;
-        route.setTotalDays(totalDays);
-
+        
+        // 3. 저장
         Route savedRoute = routeRepository.save(route);
-        log.info("Route 저장 완료. ID: {}", savedRoute.getId());
-
-        // 2. RoutePlace(자식) 저장 - 이중 리스트 파싱
-        saveRoutePlaces(savedRoute, dto.getPlaces());
-
         return savedRoute.getId();
     }
 
     /**
      * 일정 상세 조회
      */
-    @Transactional(readOnly = true)
     public RouteDetailResponseDto getRouteDetail(Long routeId) {
-        
-        // 1. Route 조회
         Route route = routeRepository.findById(routeId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 routeId: " + routeId));
+                .orElseThrow(() -> new IllegalArgumentException("해당 일정이 없습니다. id=" + routeId));
 
-        // 2. RoutePlace 조회 (정렬: 일자 -> 순서)
-        List<RoutePlace> routePlaces = 
-                routePlaceRepository.findByRouteIdOrderByDayIndexAscOrderIndexAsc(routeId);
-
-        // 3. 일자별(dayIndex) 그룹핑
-        Map<Integer, List<RoutePlace>> groupedByDay = routePlaces.stream()
-                .collect(Collectors.groupingBy(RoutePlace::getDayIndex, LinkedHashMap::new, Collectors.toList()));
-
-        // 4. 응답 DTO 변환
-        List<DayItineraryDto> dayItineraries = new ArrayList<>();
-
-        for (Map.Entry<Integer, List<RoutePlace>> entry : groupedByDay.entrySet()) {
-            int dayIndex = entry.getKey();
-            List<RoutePlace> dayPlaces = entry.getValue();
-
-            // 장소 정보 변환 (저장된 placeName 사용)
-            List<PlaceSummaryDto> placeSummaries = dayPlaces.stream()
-                    .map(rp -> new PlaceSummaryDto(
-                            rp.getPlaceId(),
-                            rp.getPlaceName(), // ★ DB에 저장해둔 이름 꺼내기
-                            rp.getOrderIndex()
-                    ))
-                    .toList();
-
-            dayItineraries.add(new DayItineraryDto(dayIndex, placeSummaries));
-        }
-
-        return new RouteDetailResponseDto(
-                route.getId(),
-                route.getMemberId(),
-                route.getTitle(),
-                route.getStartDate(),
-                route.getEndDate(),
-                route.getTotalDays(),
-                dayItineraries
-        );
+        // 엔티티 -> DTO 변환 (생성자나 빌더 패턴 사용 권장)
+        // 여기서는 예시로 Setter 혹은 생성자를 가정하고 작성합니다.
+        return new RouteDetailResponseDto(route); 
     }
 
     /**
-     * 내 일정 목록 조회
+     * 특정 회원의 일정 목록 조회
      */
-    @Transactional(readOnly = true)
     public List<RouteListItemDto> getRoutesByMember(Long memberId) {
-        List<Route> routes = routeRepository.findByMemberId(memberId);
+        // Repository에서 user_id로 조회하는 메서드를 호출
+        List<Route> routes = routeRepository.findAllByUser_Id(memberId);
 
+        // List<Route> -> List<RouteListItemDto> 변환
         return routes.stream()
-                .map(route -> new RouteListItemDto(
-                        route.getId(),
-                        route.getTitle(),
-                        route.getStartDate(),
-                        route.getEndDate(),
-                        route.getTotalDays()
-                ))
-                .toList();
+                .map(RouteListItemDto::new) // DTO 생성자에서 엔티티를 받아서 처리한다고 가정
+                .collect(Collectors.toList());
     }
 
     /**
      * 일정 수정
-     * - 전략: 기존 장소 전부 삭제(Delete) -> 새 장소 전체 저장(Insert)
      */
+    @Transactional
     public void updateRoute(Long routeId, RouteCreateRequestDto dto) {
-        log.info("일정 수정 요청. ID: {}", routeId);
-
         Route route = routeRepository.findById(routeId)
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 routeId: " + routeId));
+                .orElseThrow(() -> new IllegalArgumentException("해당 일정이 없습니다. id=" + routeId));
 
-        // 1. 기본 정보 수정 (Dirty Checking)
+        // Dirty Checking (변경 감지) - save() 호출 없이 값만 바꾸면 트랜잭션 종료 시 자동 업데이트
         route.setTitle(dto.getTitle());
         route.setStartDate(dto.getStartDate());
         route.setEndDate(dto.getEndDate());
         
-        int totalDays = (int) ChronoUnit.DAYS.between(dto.getStartDate(), dto.getEndDate()) + 1;
-        route.setTotalDays(totalDays);
-
-        // 2. 기존 장소 삭제
-        routePlaceRepository.deleteByRouteId(routeId);
-        log.info("기존 장소 데이터 삭제 완료");
-
-        // 3. 새 장소 저장
-        saveRoutePlaces(route, dto.getPlaces());
-        log.info("새 장소 데이터 저장 완료");
+        // 유저 변경이 필요한 경우 등은 추가 로직 작성
     }
 
     /**
      * 일정 삭제
      */
+    @Transactional
     public void deleteRoute(Long routeId) {
-        if (!routeRepository.existsById(routeId)) {
-            throw new IllegalArgumentException("존재하지 않는 routeId: " + routeId);
-        }
-        // 자식 먼저 삭제 -> 부모 삭제
-        routePlaceRepository.deleteByRouteId(routeId);
-        routeRepository.deleteById(routeId);
-        log.info("일정 삭제 완료. ID: {}", routeId);
-    }
+        Route route = routeRepository.findById(routeId)
+                .orElseThrow(() -> new IllegalArgumentException("해당 일정이 없습니다. id=" + routeId));
 
-    
-    // =================================================================
-    // [보조 메서드] 장소 리스트 저장 로직 (생성, 수정에서 공통 사용)
-    // =================================================================
-    private void saveRoutePlaces(Route route, List<List<SimplePlaceDto>> placeGrid) {
-        if (placeGrid == null || placeGrid.isEmpty()) return;
-
-        for (int i = 0; i < placeGrid.size(); i++) {
-            List<SimplePlaceDto> dailyPlaces = placeGrid.get(i);
-            int dayIndex = i + 1; // 1일차부터 시작
-
-            for (int j = 0; j < dailyPlaces.size(); j++) {
-                SimplePlaceDto placeDto = dailyPlaces.get(j);
-                int orderIndex = j + 1; // 1번부터 시작
-
-                RoutePlace routePlace = new RoutePlace();
-                routePlace.setRoute(route);
-                
-                // ★ ID와 이름 둘 다 저장
-                routePlace.setPlaceId(placeDto.getPlaceId());
-                routePlace.setPlaceName(placeDto.getPlaceName()); 
-
-                routePlace.setDayIndex(dayIndex);
-                routePlace.setOrderIndex(orderIndex);
-
-                routePlaceRepository.save(routePlace);
-            }
-        }
+        routeRepository.delete(route);
     }
 }
